--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            white-space: pre-line;
+        }
+    </style>
 </head>
 <body>
     <p>On ipad orientation change, clipPath:inset(0) or polygon(0 0, 100% 0, 100% 100%, 0 100%) over a position:fixed element doesn't render
