--- a/workaround.html
+++ b/workaround.html
@@ -16,6 +16,7 @@
         border: 1px solid #000;
         position: relative;
         overflow: hidden;
+        -webkit-clip-path: inset(0);
         clip-path: inset(0);
       }
 
